--- a/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.html
+++ b/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1404213517" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1404221902" media="all" />
 		<!--[if lt IE 9]>
 			<link href="../../ie8.css" rel="stylesheet"/>
 		<![endif]-->
@@ -29,8 +29,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1404213517" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1404213517" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1404221902" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1404221902" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -349,7 +349,7 @@
             <div class="fadeout">
               <p class="ingressi">Hankkeen kuvausteksti tänne. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget elementum nibh. Nunc in tortor vel velit feugiat dictum nec pharetra erat. In eget molestie velit. Suspendisse tincidunt pharetra lorem, non pharetra orci porta vel. Proin adipiscing, lacus sed euismod posuere, felis nunc varius nisi, eu volutpat mi odio a mi. Nullam vel tellus tincidunt, tristique sem sed, ullamcorper mi. Suspendisse potenti. Pellentesque tristique libero eget mollis congue. Pellentesque porta facilisis lobortis. Ut sit amet lorem eros. Cras rutrum metus quis condimentum egestas. Pellentesque iaculis turpis purus, a elementum diam convallis non. In nulla purus, ultrices quis turpis in, facilisis ultrices est. Pellentesque eu justo lobortis ligula sagittis tristique. Sed varius massa sed lectus tempus, sed eleifend ligula tincidunt. Curabitur aliquam porta enim, at bibendum arcu elementum nec.</p>
               <p class="read-more">
-                <i class="om-small_arrow_down size-l"></i> <a href="">Lue lisää</a>
+                <a href="">Lue lisää</a>
               </p>
             </div>
             <div class="some-buttons inline-element">
@@ -391,114 +391,116 @@
               <p class="helper-text small is-vishidden">Lorem ipsum</p>
             </div>
             <div class="fadeout">
-              <table class="table-borderless">
-                <thead>
-                  <tr>
-                    <td></td>
-                    <td>
-                      Seuraa
-                      <span></span>
-                    </td>
-                    <td>
-                      On osallistunut
-                      <span></span>
-                    </td>
-                    <td>
-                      Vastuuhenkilö
-                      <span></span>
-                    </td>
-                    <td>
-                      Ohjaaja
-                      <span></span>
-                    </td>
-                    <td>
-                      Kutsuttu
-                      <span></span>
-                    </td>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td class="left">
-                      <a href="#">Mikko Mallikas</a>
-                    </td>
-                    <td></td>
-                    <td>
-                      X
-                    </td>
-                    <td></td>
-                    <td>
-                      X
-                    </td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td class="left">
-                      <a href="#">Matti Meikäläinen</a>
-                    </td>
-                    <td>
-                      X
-                    </td>
-                    <td>
-                      X
-                    </td>
-                    <td>
-                      X
-                    </td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td class="left">
-                      <a href="#">Jaska Jokunen</a>
-                    </td>
-                    <td>
-                      X
-                    </td>
-                    <td>
-                      X
-                    </td>
-                    <td>
-                      X
-                    </td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td class="left">
-                      <a href="#">Oskari Olematon</a>
-                    </td>
-                    <td></td>
-                    <td>
-                      X
-                    </td>
-                    <td>
-                      X
-                    </td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td class="left">
-                      <a href="#">David Hasselhoff</a>
-                    </td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>
-                      X
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
+              <div class="scrollable-table-wrapper">
+                <table class="table-borderless">
+                  <thead>
+                    <tr>
+                      <td></td>
+                      <td>
+                        Seuraa
+                        <span></span>
+                      </td>
+                      <td>
+                        On osallistunut
+                        <span></span>
+                      </td>
+                      <td>
+                        Vastuuhenkilö
+                        <span></span>
+                      </td>
+                      <td>
+                        Ohjaaja
+                        <span></span>
+                      </td>
+                      <td>
+                        Kutsuttu
+                        <span></span>
+                      </td>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td class="left">
+                        <a href="#">Mikko Mallikas</a>
+                      </td>
+                      <td></td>
+                      <td>
+                        X
+                      </td>
+                      <td></td>
+                      <td>
+                        X
+                      </td>
+                      <td></td>
+                    </tr>
+                    <tr>
+                      <td class="left">
+                        <a href="#">Matti Meikäläinen</a>
+                      </td>
+                      <td>
+                        X
+                      </td>
+                      <td>
+                        X
+                      </td>
+                      <td>
+                        X
+                      </td>
+                      <td></td>
+                      <td></td>
+                    </tr>
+                    <tr>
+                      <td class="left">
+                        <a href="#">Jaska Jokunen</a>
+                      </td>
+                      <td>
+                        X
+                      </td>
+                      <td>
+                        X
+                      </td>
+                      <td>
+                        X
+                      </td>
+                      <td></td>
+                      <td></td>
+                    </tr>
+                    <tr>
+                      <td class="left">
+                        <a href="#">Oskari Olematon</a>
+                      </td>
+                      <td></td>
+                      <td>
+                        X
+                      </td>
+                      <td>
+                        X
+                      </td>
+                      <td></td>
+                      <td></td>
+                    </tr>
+                    <tr>
+                      <td class="left">
+                        <a href="#">David Hasselhoff</a>
+                      </td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td>
+                        X
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
               <p class="read-more">
                 <a href="">Lue lisää</a>
               </p>
             </div>
           </div>
         </div>
-        <div class="gi-ext">
+        <div class="gi-ext hanke-sidebar">
           <!-- perustiedot -->
           <div class="content-item large">
             <h2>
@@ -512,51 +514,53 @@
                 <a href="">Lue lisää</a>
               </p>
             </div>
-            <table class="table-borderless narrow">
-              <tbody>
-                <tr>
-                  <th>Vastuutaho</th>
-                  <td colspan="2">Lorem Ipsum</td>
-                </tr>
-                <tr>
-                  <th>Hanke luotu</th>
-                  <td colspan="2">
-                    <span class="date">23.10.2012</span>
-                    <a href="#">Mikko Mallikas</a>
-                  </td>
-                </tr>
-                <tr>
-                  <th>Hanke muokattu</th>
-                  <td colspan="2">
-                    <span class="date">3.4.2014 8:38:05</span>
-                    <a href="#">Mikko Mallikas</a>
-                  </td>
-                </tr>
-                <tr>
-                  <th>Liitteet</th>
-                  <td class="table-cell-list">
-                    <h4>Nimi</h4>
-                    <a href="#">test2.txt</a>
-                  </td>
-                  <td class="table-cell-list">
-                    <h4>Kuvaus</h4>
-                    <p>Liitteen kuvausteksti</p>
-                  </td>
-                </tr>
-                <tr>
-                  <th>Linkit</th>
-                  <td>
-                    <ul>
-                      <li>
-                        <a href="#">Google</a>
-                      </li>
-                    </ul>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+             <div class="scrollable-table-wrapper">
+              <table class="table-borderless narrow">
+                <tbody>
+                  <tr>
+                    <th>Vastuutaho</th>
+                    <td colspan="2">Lorem Ipsum</td>
+                  </tr>
+                  <tr>
+                    <th>Hanke luotu</th>
+                    <td colspan="2">
+                      <span class="date">23.10.2012</span>
+                      <a href="#">Mikko Mallikas</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>Hanke muokattu</th>
+                    <td colspan="2">
+                      <span class="date">3.4.2014 8:38:05</span>
+                      <a href="#">Mikko Mallikas</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>Liitteet</th>
+                    <td class="table-cell-list">
+                      <h4>Nimi</h4>
+                      <a href="#">test2.txt</a>
+                    </td>
+                    <td class="table-cell-list">
+                      <h4>Kuvaus</h4>
+                      <p>Liitteen kuvausteksti</p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>Linkit</th>
+                    <td>
+                      <ul>
+                        <li>
+                          <a href="#">Google</a>
+                        </li>
+                      </ul>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
-          
+
           <!-- kutsu -->
           <div class="content-item large invitation">
             <h3>
@@ -580,7 +584,7 @@
             <div class="sidebar-form-errors">
             </div>
           </div>
-          
+
           <div class="content-item large">
             <div class="helper-container">
               <span class="icon-help h4" title="Lorem ipsum" placement="top">Asiasanat ja paikkakunnat</span>
@@ -889,10 +893,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1404213517">
+	<script id="pl-js-polyfill-insert-1404221902">
 		(function() {
 			if (self != top) {
-				var cb = '1404213517';
+				var cb = '1404221902';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -901,10 +905,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1404213517">
+	<script id="pl-js-insert-1404221902">
 		(function() {
 			if (self != top) {
-				var cb = '1404213517';
+				var cb = '1404221902';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
